docs/assets/css/styles.css
---
---
section {
    margin-top: 30px;
}
#score-variants {
    border: none;
    margin: 0;
}
#score-variants td {
    background-color: transparent;
    text-align: center;
    padding: 0px;
    margin: 0px;
}
#choice-and-music {
    padding-top: 10px;
    margin-top: 30px;
    box-shadow: 5px 5px 20px 0 rgba(0, 0, 0, 0.1);
    max-width: 900px;
}
#music-image {
    -filter: sepia(.5) brightness(.97);
    -webkit-filter: sepia(.5) brightness(.97);
    max-width: 900px;
}
body {
    background-color: #F7F7EE /* Body should match music-image color after filters */
}
label {
    display: inline-block;
    padding: 2px 5px;
    border: solid 2px lightgray;
    border-radius: 4px;
}
input[type="radio"] {
    display:none;
}
input[type="radio"]:checked + label {
    border: solid 2px black;
}
.part-volume {
    background: #ccc;
    margin: 0;
}
.part-volume td, .part-volume th{
    /*max-width: 100px;*/
    padding: 0 10px;
}
.part-volume input {
    /*max-width: 100px;*/
    width: 100%;
}
img {
    position: relative;
    margin: 0 auto;
    padding: 0;
    margin: 0;
    border: none;
    width: 100%;
}
.tooltip {
  position: relative;
  display: inline-block;
  border-bottom: 1px dotted #C30000;
  padding: 0 2px;
  color: #C30000;
  font-weight: 200;
}

/* Tooltip text */
.tooltip .tooltiptext {
  visibility: hidden;
  width: 150px;
  background-color: black;
  color: #fff;
  text-align: center;
  padding: 5px 4px;
  border-radius: 4px;
  line-height: 1.4;
 
  /* Position the tooltip text - see examples below! */
  position: absolute;
  z-index: 1;
}

/* Show the tooltip text when you mouse over the tooltip container */
.tooltip:hover .tooltiptext {
  visibility: visible;
}

.lyric-box {
    font-size: 12px;
    overflow-y: scroll;
    height: 80px;
    max-width: 390px;
    display: inline-block;
    margin: 0;
    line-height: 1.2;
    white-space: pre-wrap;
    width: 95%;
    border-radius: 4px;
    border-color: #444;
    border-width: 1px 0px 4px 0px;
    border-style: solid;
}
.lyric-box::first-letter {
  font-weight: 500;
  font-size: 18px;
  font-family: Arvo, sans-serif;
}

.hymn-name-box {
    background: #e7e3df;
}
.hymn-name-box a {
    font-weight: 500;
}
.taglink {
    background: #b55555;
    color: #fff;
    border-radius: 4px;
    margin: 0px 0px;
    padding: 0px 2px;
    display: inline-block;
    font-weight: 400;
    font-size: 11px;
    line-height: 1.6;
}

.search-div {
position: fixed;
background: #232323;
padding: 4px;
border-bottom-right-radius: 6px;
border-width: 0 2px 2px 0;
border-style: solid;
border-color: #f7f7ee;
left: 0;
top: 0;
}
h1 {
    margin-top: 0;
}
ul, ol{
    margin-top: -20px;
}
@media print, screen and (max-width: 960px) {
    header {
    max-width: 400px;
    padding-right: 34px;
    }
}

thead, tbody, tfoot { vertical-align: middle } /* add this rule*/
td, th, tr { vertical-align: inherit } /* add this rule */

